welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: reassignment to val
	else if ( a = b) { 2 * ( a + b ) }
                    ^sumDouble:3: error: type mismatch;
 found   : Unit
 required: Integer
	else if ( a = b) { 2 * ( a + b ) }
             ^